--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,19 @@
 *{
     box-sizing: border-box;
+    font-family: "AppleSDGothicNeo";
     margin:0;
     color:#fff;
     scroll-behavior: smooth;
     text-decoration: none;
 }
+a:visited { text-decoration: none; }
+a:hover { text-decoration: none; }
+a:focus { text-decoration: none; }
+a:hover, a:active { text-decoration: none; }
+@font-face {
+    font-family: "AppleSDGothicNeo";
+    src: url("../css/AppleSDGothicNeo.ttc") format("opentype"); /* 폰트파일 불러오기 */
+  }
 body{
     background: #111;
 }
@@ -149,15 +158,26 @@ span::selection{
     border: 1px solid #d7d7d7;
     transform:scale(1.01);
 }
-.h-button-b h6{
+.h-button-b h6 a{
     font-size:18px;
     color:#6b6b6b;
-    text-decoration: underline;
     transition: all 0.3s ease;
 }
-.h-button-b h6:hover{
+.h-button-b h6 a span{
+    font-size:18px;
+    margin-left: 12px;
+    color:#999;
+    transition: all 0.3s ease;
+}
+.h-button-b h6 a:hover{
     color:#fff;
     transform:scale(1.01);
+    text-decoration: underline;
+}
+.h-button-b h6 a span:hover{
+    color:#fff;
+    transform:scale(1.01);
+    text-decoration: underline;
 }
 
 .carousel-area{
@@ -174,14 +194,14 @@ span::selection{
 }
 .c-carousel{
     width:100vw;
-    height:672px;
+    height:692px;
     margin-top:72px;
     overflow: hidden;
     position:relative;
 }
 .c-box-cover{
     width:960px;
-    height:600px;
+    height:620px;
     margin:auto;
     transition: all 0.6s ease-in-out;
 }
@@ -191,8 +211,43 @@ span::selection{
 }
 .c-inner{
     width: 960px;
-    height:600px;
+    height:620px;
     float: left;
+    position:relative;
+}
+.c-inner-g{
+    width:100%;
+    height:100%;
+    position:absolute;
+    opacity: 0;
+    top:0;
+    left:0;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(2px);
+    transition: all 0.4s ease-in-out;
+}
+.c-inner-g:hover{
+    opacity: 1;
+}
+.c-inner-b{
+    width:auto;
+    height:auto;
+    text-align:center;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
+}
+.c-inner-b span{
+    font-size:18px;
+    color:#fcfcfc;
+    padding: 18px 56px;
+    border: 1px solid #6b6b6b;
+    border-radius:999px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.20);
+    background: #202020;
 }
 .c-button-g{
     width:auto;
