--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ span::selection{
     top:0;
     left:0;
     display:flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     backdrop-filter: blur(2px);
     transition: all 0.4s ease-in-out;
@@ -240,14 +240,21 @@ span::selection{
     justify-content: center;
     align-items:center;
 }
-.c-inner-b span{
-    font-size:18px;
+.c-inner-b a span{
+    font-size:15px;
+    font-weight:400;
     color:#fcfcfc;
-    padding: 18px 56px;
-    border: 1px solid #6b6b6b;
+    padding: 12px 36px;
+    border: 1px solid #888;
     border-radius:999px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.20);
-    background: #202020;
+    background:rgba(0, 0, 0, 0.1);
+    transition: all 0.4s ease-in-out;
+}
+.c-inner-b a span:hover{
+    border: 1px solid #d7d7d7;
+    background:#000;
+    font-size:16px;
 }
 .c-button-g{
     width:auto;
