--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,8 @@ span::selection{
 }
 .m-left-c img{
     width:100%;
-    height:auto;
+    height:100%;
+    object-fit: cover;
 }
 .m-right-c{
     position:relative;
@@ -116,7 +117,8 @@ span::selection{
 }
 .m-right-c img{
     width:100%;
-    height:auto;
+    height:100%;
+    object-fit: cover;
 }
 .h-button-g{
     position:absolute;
@@ -321,15 +323,6 @@ span::selection{
     margin-top:2px;
     margin-bottom:24px;
 }
-.r-grd-content{
-    position:absolute;
-    z-index:2;
-    width: 100px;
-    height: 100%;
-    right: 0px;
-    background: linear-gradient(90deg, #111111 0%, rgba(17, 17, 17, 0) 100%);
-    transform: matrix(-1, 0, 0, 1, 0, 0);
-}
 .r-images{
     width:860px;
     height:auto;
@@ -337,7 +330,7 @@ span::selection{
     background:url(../image/mainpage.png);
     transition: all 0.4s ease-in-out;
 }
-
+/* 전광판 및 원형텍스트 그룹 */
 .flow-content{
     position:relative;
     width:100vw;
@@ -351,6 +344,15 @@ span::selection{
     height: 100%;
     left: 0px;
     background: linear-gradient(90deg, #111111 0%, rgba(17, 17, 17, 0) 100%);
+}
+.r-grd-content{
+    position:absolute;
+    z-index:2;
+    width: 100px;
+    height: 100%;
+    right: 0px;
+    background: linear-gradient(90deg, #111111 0%, rgba(17, 17, 17, 0) 100%);
+    transform: matrix(-1, 0, 0, 1, 0, 0);
 }
 .circle-f-c{
     position:absolute;
@@ -464,4 +466,228 @@ footer{
     width:auto;
     height:64px;
     margin:400px auto 0 auto;
+}
+
+
+/* 태블릿 가로 및 저해상도 PC */
+@media all and (min-width: 961px) and (max-width:1439px){
+    h1{font-size:40px;}
+    h2{font-size:28px;}
+    h5{font-size:16px;}
+    h6{font-size:15px;}
+    span{font-size:13px;}
+
+    .h-button-g{
+        opacity: 1;
+        width:80%;
+        height:100px;
+        top:100%;
+        left:50%;
+        transform:translate(-50%, -100%);
+        background:rgba(0, 0, 0, 0.1);
+        backdrop-filter: blur(20px);
+        border-radius:20px 20px 0 0;
+    }
+    .h-button-b{
+        flex-direction: row;
+    }
+    .h-button-b h5{
+        border:1px solid #202020;
+        border-radius:999px;
+        background:#000;
+        padding: 12px 32px;
+        margin: 0 20px 0 0;
+    }
+
+
+
+
+
+
+    .c-carousel{
+        width:900px;
+        margin:72px auto 0 auto;
+    }
+    .carousel-area .c-text{
+        width:900px;
+    }
+    .c-box-cover{
+        width:900px;
+    }
+    .c-inner-g{
+        opacity: 1;
+        backdrop-filter: blur(0px);
+    }
+    .c-inner-b a span{
+    background:#111;
+    }
+    .r-content{
+        width:900px;
+        height:auto;
+        margin:240px auto 0 auto;
+        display:flex;
+        justify-content: space-between;
+    }
+    .r-button-g{
+        width:560px;
+        height: 60px;
+        bottom:0;
+        top:460px;
+        left:50%;
+        transform: translate(-50%, 0);
+        display:flex;
+        justify-content: center;
+        background:#202020;
+        border-radius:999px;
+    }
+    .r-button-g button{
+        width:auto;
+        height:auto;
+        margin:0 10px;
+    }
+    .r-text{
+        width:360px;
+        height:auto;
+        margin:0 20px 0 0;
+        padding:0 0 140px 0;
+    }
+    .r-line{
+        margin: 48px auto;
+    }
+    .r-images{
+        width: 430px;
+        height:350px;
+        background-size: cover;
+        background-position: center center;
+        margin-top:40px;
+    }
+    .flow-content{
+        height:560px;
+        margin: 120px auto 200px auto;
+    }
+    .about{
+        width:600px;
+        flex-direction: column;
+        justify-content: none;
+    }
+    .a-line{
+        width:600px;
+        height:70px;
+    }
+    .a-content{
+        margin-top:104px;
+    }
+    .a-content h2{
+        margin-bottom:48px;
+    }
+    footer{
+        margin-top:200px;
+    }
+}
+
+
+
+
+
+
+
+
+
+/* 태블릿 세로, 모바일 가로(iphone14promax-932px, serficePro-960) */
+@media all and (min-width: 481px) and (max-width:960px){
+
+    .r-content{
+        width:900px;
+        height:auto;
+        margin:300px auto 0 auto;
+        display:flex;
+        flex-direction: column;
+    }
+    .r-button-g{
+        width:900px;
+        height:20px;
+        bottom:0;
+        top:360px;
+        display:flex;
+        justify-content: center;
+    }
+    .r-text{
+        width:580px;
+        height:auto;
+        text-align:center;
+        margin:0 auto;
+        padding:0 0 140px 0;
+    }
+    .r-line{
+        margin: 48px auto;
+    }
+    .r-images{
+        width: 860px;
+        height:700px;
+    }
+.h-button-g{
+    position:absolute;
+    opacity: 0;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    background:rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(40px);
+    transition: all 0.4s ease-out;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.h-button-g:hover{
+    opacity: 1;
+}
+.h-button-b{
+    width:auto;
+    height:auto;
+    font-size:50px;
+    text-align:center;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
+}
+.h-button-b h5{
+    border:1px solid #888;
+    border-radius:999px;
+    padding: 28px 64px;
+    font-size:20px;
+    margin-bottom:12px;
+    transition: all 0.4s ease-in-out;
+}
+.h-button-b h5:hover{
+    /* background:#000; */
+    border: 1px solid #d7d7d7;
+    transform:scale(1.01);
+}
+.h-button-b h6 a{
+    font-size:18px;
+    color:#6b6b6b;
+    transition: all 0.3s ease;
+}
+.h-button-b h6 a span{
+    font-size:18px;
+    margin-left: 12px;
+    color:#999;
+    transition: all 0.3s ease;
+}
+.h-button-b h6 a:hover{
+    color:#fff;
+    transform:scale(1.01);
+    text-decoration: underline;
+}
+.h-button-b h6 a span:hover{
+    color:#fff;
+    transform:scale(1.01);
+    text-decoration: underline;
+}
+}
+/* 모바일 */
+@media all and (max-width:480px){
+
 }
