--- a/css/style.css
+++ b/css/style.css
@@ -292,6 +292,7 @@ span::selection{
 .r-button-g{
     position:absolute;
     bottom:72px;
+    word-break: keep-all;
 }
 .r-button-g button{
     cursor:pointer;
@@ -359,6 +360,7 @@ span::selection{
     width:auto;
     height:auto;
     left:-100px;
+    opacity:0.2;
 }
 /* 전광판 */
 .flow-container{
@@ -471,11 +473,13 @@ footer{
 
 /* 태블릿 가로 및 저해상도 PC */
 @media all and (min-width: 961px) and (max-width:1439px){
+
     h1{font-size:40px;}
     h2{font-size:28px;}
     h5{font-size:16px;}
     h6{font-size:15px;}
     span{font-size:13px;}
+
 
     .h-button-g{
         opacity: 1;
@@ -498,12 +502,6 @@ footer{
         padding: 12px 32px;
         margin: 0 20px 0 0;
     }
-
-
-
-
-
-
     .c-carousel{
         width:900px;
         margin:72px auto 0 auto;
@@ -580,114 +578,376 @@ footer{
     .a-content h2{
         margin-bottom:48px;
     }
+
+
     footer{
         margin-top:200px;
     }
 }
 
 
-
-
-
-
-
-
-
 /* 태블릿 세로, 모바일 가로(iphone14promax-932px, serficePro-960) */
 @media all and (min-width: 481px) and (max-width:960px){
 
-    .r-content{
-        width:900px;
+
+    h1{font-size:40px;}
+    h2{font-size:28px;}
+    h5{font-size:16px;}
+    h6{font-size:15px;}
+    span{font-size:13px;}
+
+    .main-content{
+        width:100%;
         height:auto;
-        margin:300px auto 0 auto;
-        display:flex;
         flex-direction: column;
     }
+    .m-left-c{
+        width:100%;
+        height:auto;
+    }
+    .m-left-c img{
+        margin-bottom:-6px;
+    }
+    .m-right-c{
+        width:100%;
+        height:auto;
+    }
+    .m-right-c img{
+        margin-bottom:-6px;
+    }
+    .h-button-g{
+        opacity: 1;
+        width:90%;
+        height:100px;
+        top:100%;
+        left:50%;
+        transform:translate(-50%, -100%);
+        background:rgb(0, 0, 0, 0.1);
+        backdrop-filter: blur(20px);
+        border-radius:20px 20px 0 0;
+    }
+    .h-button-b{
+        flex-direction: row;
+    }
+    .h-button-b h5{
+        border:1px solid #202020;
+        border-radius:999px;
+        background:#000;
+        padding: 12px 32px;
+        margin: 0 20px 0 0;
+    }
+    .c-carousel{
+        width:460px;
+        height:400px;
+        margin:0 auto 0 auto;
+    }
+    .c-box-cover{
+        height:400px;
+    }
+    .carousel-area .c-text{
+        width:460px;
+        height:180px;
+    }
+    .c-content{
+        display:flex;
+        width:1380px;
+    }
+    .c-box-cover{
+        width:460px;
+    }
+    .c-inner{
+        padding-top:60px;
+        width:460px;
+        height:auto;
+        display:flex;
+        justify-content: flex-start;
+    }
+    .c-inner img{
+        width:100%;
+        height:auto;
+    }
+    .c-inner-g{
+        opacity: 1;
+        backdrop-filter: blur(0px);
+    }
+    .c-inner-b a span{
+    background:#111;
+    }
+    .c-button-g{
+        bottom:366px;
+    }
+    .r-content{
+        width:460px;
+        height:auto;
+        margin:240px auto 240px auto;
+        display:flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
     .r-button-g{
-        width:900px;
-        height:20px;
+        width:440px;
+        height: 60px;
         bottom:0;
-        top:360px;
+        top:720px;
+        left:50%;
+        transform: translate(-50%, 0);
         display:flex;
         justify-content: center;
+        background:#202020;
+        border-radius:999px;
+    }
+    .r-button-g button{
+        font-size:12px;
+        width:auto;
+        height:auto;
+        margin:0 10px;
+    }
+    .r-button-g button:focus{
+        font-size:13px;
     }
     .r-text{
-        width:580px;
+        width:460px;
         height:auto;
-        text-align:center;
-        margin:0 auto;
-        padding:0 0 140px 0;
+        /* text-align:center; */
+        margin:0;
+        padding:0 0 20px 0;
     }
     .r-line{
-        margin: 48px auto;
+        margin: 24px 0;
     }
     .r-images{
-        width: 860px;
-        height:700px;
+        width: 460px;
+        height:380px;
+        background-size: cover;
+        background-position: center center;
+        margin-top:20px;
     }
-.h-button-g{
-    position:absolute;
-    opacity: 0;
-    width:100%;
-    height:100%;
-    top:0;
-    left:0;
-    background:rgba(0, 0, 0, 0.6);
-    backdrop-filter: blur(40px);
-    transition: all 0.4s ease-out;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-}
-.h-button-g:hover{
-    opacity: 1;
-}
-.h-button-b{
-    width:auto;
-    height:auto;
-    font-size:50px;
-    text-align:center;
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items:center;
-}
-.h-button-b h5{
-    border:1px solid #888;
-    border-radius:999px;
-    padding: 28px 64px;
-    font-size:20px;
-    margin-bottom:12px;
-    transition: all 0.4s ease-in-out;
-}
-.h-button-b h5:hover{
-    /* background:#000; */
-    border: 1px solid #d7d7d7;
-    transform:scale(1.01);
-}
-.h-button-b h6 a{
-    font-size:18px;
-    color:#6b6b6b;
-    transition: all 0.3s ease;
-}
-.h-button-b h6 a span{
-    font-size:18px;
-    margin-left: 12px;
-    color:#999;
-    transition: all 0.3s ease;
-}
-.h-button-b h6 a:hover{
-    color:#fff;
-    transform:scale(1.01);
-    text-decoration: underline;
-}
-.h-button-b h6 a span:hover{
-    color:#fff;
-    transform:scale(1.01);
-    text-decoration: underline;
-}
+    .flow-content{
+        height:320px;
+        margin: 120px auto 200px auto;
+    }
+    .circle-f-c{
+        left:-40px;
+    }
+    .flow-content video{
+        width:200px;
+    }
+    .flow-wrap{
+        font-size:12px;
+        margin: 0 20px;
+    }
+    .about{
+        width:460px;
+        flex-direction: column;
+        justify-content: none;
+    }
+    .a-title{
+        font-size:80px;
+    }
+    .a-line{
+        width:460px;
+        height:70px;
+    }
+    .a-content{
+        margin-top:104px;
+        width:460px;
+    }
+    .a-content h2{
+        font-size: 24px;
+    }
+    .a-content h2{
+        margin-bottom:48px;
+    }
+
+
+    footer{
+        margin-top:200px;
+    }
 }
 /* 모바일 */
 @media all and (max-width:480px){
 
+    h1{font-size:32px;}
+    h2{font-size:24px;}
+    h5{font-size:15px;}
+    h6{font-size:14px;}
+    span{font-size:13px;}
+
+    .main-content{
+        width:100%;
+        height:auto;
+        flex-direction: column;
+        background:#111;
+        margin-bottom:120px;
+    }
+    .m-left-c{
+        width:100%;
+        height:auto;
+        padding-bottom:108px;
+    }
+    .m-right-c{
+        width:100%;
+        height:auto;
+        padding-bottom:108px;
+    }
+    .h-button-g{
+        opacity: 1;
+        width:100%;
+        height:52px;
+        top:100%;
+        left:50%;
+        transform:translate(-50%, -200%);
+        background:rgb(0, 0, 0, 0.0);
+        backdrop-filter: blur(0px);
+    }
+    .h-button-b{
+        flex-direction: row;
+    }
+    .h-button-b h5{
+        font-size:16px;
+        border:1px solid #202020;
+        border-radius:999px;
+        background:#000;
+        padding: 12px 24px;
+        margin: 0 20px 0 0;
+    }
+    .h-button-b h6 a{
+        color:#d7d7d7;
+        font-size:15px;
+    }
+    .h-button-b h6 a span{
+        font-size:15px;
+    }
+    .c-carousel{
+        width:100vw;
+        height:400px;
+        margin:0 auto 0 auto;
+    }
+    .c-box-cover{
+        height:400px;
+    }
+    .carousel-area .c-text{
+        width:100vw;
+        height:180px;
+        padding:0 24px;
+    }
+    .c-content{
+        display:flex;
+        width:1380px;
+    }
+    .c-box-cover{
+        width:100vw;
+    }
+    .c-inner{
+        padding-top:60px;
+        width:100vw;
+        height:auto;
+        display:flex;
+        justify-content: flex-start;
+    }
+    .c-inner img{
+        width:100%;
+        height:auto;
+    }
+    .c-inner-g{
+        width:100vw;
+        padding: 0 24px;
+        opacity: 1;
+        backdrop-filter: blur(0px);
+    }
+    .c-inner-b a span{
+    background:#111;
+    }
+    .c-button-g{
+        bottom:366px;
+    }
+    .r-content{
+        width:100vw;
+        height:auto;
+        margin:180px auto 140px auto;
+        display:flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .r-button-g{
+        width:100%;
+        height: 60px;
+        bottom:0;
+        top:104%;
+        left:50%;
+        transform: translate(-50%, 0);
+        display:flex;
+        justify-content: center;
+        background:none;
+        border-radius:999px;
+    }
+    .r-button-g button{
+        font-size:12px;
+        width:auto;
+        height:auto;
+        margin:0 10px;
+    }
+    .r-button-g button:focus{
+        font-size:12px;
+    }
+    .r-text{
+        width:100%;
+        height:auto;
+        /* text-align:center; */
+        margin:0;
+        padding:0 24px;
+    }
+    .r-line{
+        margin: 24px 0;
+    }
+    .r-images{
+        width: 100%;
+        aspect-ratio: 1.5 / 1;
+        background-size:cover;
+        margin-top:40px;
+    }
+    .flow-content{
+        z-index:-1;
+        height:320px;
+        margin: -160px auto 60px auto;
+    }
+    .circle-f-c{
+        left:-40px;
+    }
+    .flow-content video{
+        width:200px;
+    }
+    .flow-wrap{
+        font-size:12px;
+        margin: 0 20px;
+    }
+    .about{
+        width:100vw;
+        padding:0 24px;
+        flex-direction: column;
+        justify-content: none;
+    }
+    .a-title{
+        font-size:60px;
+    }
+    .a-line{
+        width:100%;
+        height:24px;
+    }
+    .a-content{
+        margin-top:104px;
+        width:100%;
+    }
+    .a-content h2{
+        font-size: 24px;
+    }
+    .a-content h2{
+        margin-bottom:48px;
+    }
+
+
+    footer{
+        margin-top:200px;
+        margin-bottom:44px;
+    }
 }
